remove the link for navigation for the starter

--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -42,7 +42,7 @@
 					<div id="collapsable-nav" class="collapse navbar-collapse">
 						<ul id="nav-list" class="nav navbar-nav navbar-right">
 							<li>
-								<a href="menu-categories.html">
+								<a href="#">
 									<span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Starter</a>
 								</li>
 								<li>
@@ -64,7 +64,7 @@
 							<h1 class="text-center">Our Menu</h1>
 
 							<section class="col-xs-11" id="chicken">
-								<h2 class="text-center">chicken</h2>
+								<h2 class="text-center">Chicken</h2>
 								<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Velit scelerisque in dictum non consectetur a. Orci ac auctor augue mauris augue neque gravida in fermentum. Sed nisi lacus sed viverra. Massa sed elementum tempus egestas sed sed risus pretium. Sit amet risus nullam eget felis eget nunc lobortis. Felis eget nunc lobortis mattis. Aliquam etiam erat velit scelerisque in dictum non. Volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque. Luctus venenatis lectus magna fringilla urna porttitor rhoncus. Sed vulputate mi sit amet. A lacus vestibulum sed arcu non odio euismod lacinia. Dictum non consectetur a erat nam at lectus urna duis. Vestibulum morbi blandit cursus risus at ultrices mi tempus imperdiet. Dolor morbi non arcu risus quis varius quam quisque id. Habitasse platea dictumst quisque sagittis purus.
 
 								Velit aliquet sagittis id consectetur purus ut. Fermentum posuere urna nec tincidunt praesent semper feugiat nibh. Sem fringilla ut morbi tincidunt augue interdum velit. Dapibus ultrices in iaculis nunc sed. Dui faucibus in ornare quam viverra orci sagittis eu volutpat. Vitae ultricies leo integer malesuada nunc vel. Sed viverra ipsum nunc aliquet bibendum enim facilisis. Libero id faucibus nisl tincidunt. Venenatis urna cursus eget nunc scelerisque viverra mauris. Amet risus nullam eget felis eget nunc lobortis mattis. Proin sagittis nisl rhoncus mattis. Vitae congue eu consequat ac. Amet purus gravida quis blandit turpis cursus in hac habitasse. Mattis ullamcorper velit sed ullamcorper morbi. Amet porttitor eget dolor morbi non.</p>
